# py-bitbucket

./: .env.gpg  .gitignore  .gpgrc  CLAUDE.md  README.md  accounts.csv.gpg  bludelego@gmail.com_repos.csv  bludelego@gmail.com_repos.csv.gpg  deleted_repos.txt  githubData.py.gpg  github_repos.csv  github_repos.csv.gpg  main.py  newRepoData.py.gpg  old-main.py  oldRepoData.py.gpg  pyproject.toml  requirements.txt  seriiburduja@gmail.com_repos.csv  seriiburduja@gmail.com_repos.csv.gpg  session.json.gpg  todo.txt  utils.py  views.py
classes/: AccountsCsv.py  Bitbucket.py  BitbucketApi.py  BitbucketClone.py  BitbucketCopyRemoteUrl.py  BitbucketCreateRepo.py  BitbucketDeleteRepo.py  BitbucketDeleteRepos.py  BitbucketFindRepoInFile.py  BitbucketMirror.py  BitbucketPlaywright.py  BitbucketPlaywrightCreateRepo.py  BitbucketPlaywrightGroupAccess.py  BitbucketPlaywrightMirror.py  BitbucketReposToFile.py  BitbucketToGithub.py  Browser.py  Github.py  GithubClass.py  GithubCloneRepo.py  GithubCopyRemoteUrl.py  GithubCreateRepoOnGithub.py  GithubDeleteRepo.py  GithubDeleteRepos.py  GithubRenameRepo.py  GithubRenameRepoFromCwd.py  GithubReposToFile.py  GithubToBitbucket.py  MyConfig.py  MySelenium.py  Notification.py  Select.py
execeptions/: AccountException.py  BitbucketApiException.py  BitbucketException.py  GithubException.py
libs/: select.py
modules/: getRepoData.py  git_mirror.py
my_types/: account_type.py  repo_type.py
passwords.git/: config  packed-refs
passwords.git/objects/pack/: pack-bc5106c892741a3d4ca3387789ccbe636868becd.idx  pack-bc5106c892741a3d4ca3387789ccbe636868becd.pack  pack-bc5106c892741a3d4ca3387789ccbe636868becd.rev
