[project]
name = "py-bitbucket"
version = "0.1.0"
description = ""
authors = [
    {name = "serii burduja",email = "seriiburduja@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "attrs (==25.3.0)",
    "certifi (==2025.4.26)",
    "charset-normalizer (==3.4.2)",
    "dotenv>=0.9.9",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "markdown-it-py (==3.0.0)",
    "mccabe (==0.7.0)",
    "mdurl (==0.1.2)",
    "mypy-extensions (==1.1.0)",
    "outcome (==1.3.0.post0)",
    "pathspec (==0.12.1)",
    "pycodestyle (==2.13.0)",
    "pyflakes (==3.3.2)",
    "pyfzf>=0.3.1",
    "pygithub>=2.6.1",
    "pygments (==2.19.1)",
    "pysocks (==1.7.1)",
    "questionary>=2.1.0",
    "requests (==2.32.3)",
    "rich (==14.0.0)",
    "ruff>=0.12.2",
    "selenium (==4.23.1)",
    "selenium-stealth (==1.0.6)",
    "simple-term-menu>=1.6.6",
    "sniffio (==1.3.1)",
    "sortedcontainers (==2.4.0)",
    "trio (==0.30.0)",
    "trio-websocket (==0.12.2)",
    "types-requests (==2.32.0.20250602)",
    "typing-extensions (==4.14.0)",
    "urllib3 (==2.4.0)",
    "websocket-client (==1.8.0)",
    "wsproto (==1.2.0)",
]


