[project]
name = "py-bitbucket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "dotenv>=0.9.9",
    "flake8>=7.3.0",
    "mypy>=1.17.0",
    "pyfzf>=0.3.1",
    "pygithub>=2.6.1",
    "pyperclip>=1.11.0",
    "questionary>=2.1.0",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "simple-term-menu>=1.6.6",
]
